--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -1,3 +1,13 @@
 @import 'reset';
 @import 'font';
 @import 'card';
+@import 'room';
+@import 'player';
+@import 'playground';
+@import 'msg';
+
+#app {
+  height: 100vh;
+  width: 100%;
+  position: relative;
+}
