Layout: card draggable & stream socket

--- a/src/assets/scss/room.scss
+++ b/src/assets/scss/room.scss
@@ -12,4 +12,10 @@
   background-color: $green;
   border: 2rem solid $wood;
   padding: 1rem;
+
+
+  .stack {
+    grid-area: stack;
+    z-index: 1000;
+  }
 }
