--- a/src/assets/scss/card.scss
+++ b/src/assets/scss/card.scss
@@ -4,6 +4,10 @@
     flex-direction: row;
     justify-content: center;
     align-items: center;
+
+    &.yours {
+      filter: drop-shadow(0 0 1rem $white);
+    }
   }
 
   position: absolute;
