--- a/src/assets/scss/room.scss
+++ b/src/assets/scss/room.scss
@@ -17,5 +17,9 @@
   .stack {
     grid-area: stack;
     z-index: 1000;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
   }
 }
