--- a/src/assets/scss/card.scss
+++ b/src/assets/scss/card.scss
@@ -26,7 +26,10 @@
   &.open {
     animation: openAnimate .3s ease-in-out;
     animation-fill-mode: forwards;
+  }
 
+  &.archived {
+    filter: brightness(50%);
   }
 }
 
