Methods: now show all cards when game end

--- a/src/assets/scss/card.scss
+++ b/src/assets/scss/card.scss
@@ -8,6 +8,12 @@
     &.yours {
       filter: drop-shadow(0 0 1rem $white);
     }
+
+    &.final {
+      .card.archived {
+        filter: initial;
+      }
+    }
   }
 
   position: absolute;
